# skeletonization3D

./: CMakeLists.txt  README.md  main.cpp
debug_version/: CMakeLists.txt
debug_version/include/: camera.hpp  cubesMesh.hpp  image3D.hpp  openGL.hpp  renderingWidget.hpp  scene.hpp  shader.hpp
debug_version/include/trabecula/: tubular_object.hpp
debug_version/shaders/: simple.frag  simple.vert
debug_version/src/: camera.cpp  cubesMesh.cpp  image3D.cpp  main.cpp  renderingWidget.cpp  scene.cpp  shader.cpp  swap.cpp
inc/: analyze_loader.hpp  hdr_loader.hpp  skeletonize.hpp  swap.hpp  tubular_object.hpp
inc/trabecula/: analyze_loader.hpp  build_info.hpp.in  tubular_object.hpp
src/: analyze_loader.cpp  main.cpp  skeletonize.cpp  swap.cpp  tubular_object.cpp
